Update HarmonyOS Sans SC.ini

--- a/HarmonyOS Sans SC.ini
+++ b/HarmonyOS Sans SC.ini
@@ -1,1 +1,244 @@
+[General]
+Name=鸿蒙
+Icon=..\mactray.exe.ico,0
 
+;【自动挂钩子进程】
+;0:Disable；1:Enable
+HookChildProcesses=1
+
+;【字体微调】
+;0:Normal；1:NoHinting；2:AutoHinting；3:Light+AutoHinting
+HintingMode=1
+
+;【抗锯齿方式】
+;-1:Disable；0:Normal；1:Light；2:LCD(RGB)；3:LCD(GBR)；4:Light-LCD(RGB)；5:Light-LCD(GBR)
+AntiAliasMode=4
+
+;【常规体调整】
+;-32:+32
+NormalWeight=16
+
+;【粗体字的调整】
+;-16:+16
+BoldWeight=2
+
+;【斜体字的倾斜角度微调】
+;-16:+16
+ItalicSlant=0
+
+;【只有在FontLoader=0时此项设置才有效】
+;建议选0，选1会占用大量内存，也没看出有什么好处。
+;0:Disable 1:Enable
+UseMapping=0
+
+;【Gamma模式开关】
+;-1:关闭；0:使用自定义的Gamma值；1:使用sRGB的Gamma值；2:不明
+GammaMode=0
+
+;【Gamma值，只有在GammaMode=0的时候此项设置才有效】
+;Windows的cleartype的Gamma值是1.4
+;sRGB=2.2；CT-Default=1.4
+GammaValue=1.4
+
+;【对比度】
+;数字越大越锐利，数字越小越发虚
+Contrast=1.05
+
+;【字体轮廓】
+;数字越大字体就越粗越黑
+RenderWeight=1.75
+
+;【文字边界设置】
+;数字越大越强调背景（类似文字边界被侵蚀的感觉），强调背景会有中字体锐利的感觉。适当降低对比度，提高TextTuning，可以使文字周围的颜色看起来“淡一点”
+;再加上RenderWeight，把这三个设置的微妙平衡调节好的话，能得到不输给Mac的效果
+;0:12
+;AntiAliasMode=1时，通过TextTuning分量来调节
+TextTuning=0
+;AntiAliasMode=2时，通过TextTuning的RGB分量来调节
+TextTuningR=8
+TextTuningG=8
+TextTuningB=8
+
+;【字体加粗模式】
+;对NormalWeight和BoldWeight有效
+;0:Weight值大时横向加粗，值小时双向加粗，主要是避免Weight值过大时，模式3中在小字号时加粗过度出现斩头的现象；
+;1:总是横向加粗；
+;2:总是双向加粗，也就是freetype本身的粗体渲染。
+;注意：通过加大GammaValue、TextTuning的值，可以减少Weight值过大的造成的效果问题，即可以在BolderMode=2时也可以避免转接头
+BolderMode=2
+
+;【字体的载入方法】
+;注意是载入方法，不是渲染方法；很多freetype的设置需要此项选0才能生效
+;0:用freetype载入字体
+;1:用windows的绘图核心载入字体
+FontLoader=0
+
+;【字体链接】
+;当FontLoader=0时
+;0：什么都不做；
+;1：使用注册表里的字体链接设置，通过FreeType的字符表进行查找
+;2：使用注册表里的字体链接设置，使用Windows的转换函数直接查找
+;当FontLoader=1时，会保持启用的状态，但是所有字体链接的处理会交由WIN32API完成
+FontLink=2
+
+;【字体替换】
+;当FontLoader=0时
+;0：什么都不做；
+;1：安全替换方案（兼容性较好），根据以下FontSubstitutes的配置进行替换；
+;2：完全替换方案（效果较全面，如替换后出现乱码，请尝试使用1），根据以下FontSubstitutes的配置进行替换；
+;当FontLoader=1时，会保持启用的状态，但是所有字体替代的处理会交由WIN32API完成
+FontSubstitutes=2
+
+;【让freetype处理的最大的字体尺寸，单位是像素，0的话就是全尺寸】
+;交付 gdi++ 处理的最大尺寸（单位为像素）
+;0-2147483647
+MaxHeight=0
+
+;【阴影设置】
+;格式:水平偏移,垂直偏移,深色文字的阴影透明度(0-100),深色文字的阴影颜色,浅色文字的阴影透明度(0-100),浅色文字的阴影颜色
+;Shadow=1,1,70,FFFFFF,30,000000
+;Shadow=0,0,0,0x0,0,0x0
+
+;【液晶显示器的优化配置】
+;0:None；1:Default；2:Light；16:Legacy
+LcdFilter=2
+
+;【微调LcdFilterWeight】
+;LcdFilter>0，且AntiAliasMode>-1时，该微调才生效
+;这5个值分别代表文字笔划中从左到右的笔划浓度，最小为0，最大为255
+;注释掉这个参数则恢复使用
+;当LcdFilter=1，默认值为“16,64,112,64,16”
+;当LcdFilter=2，默认值为“0,85,86,85,0”
+;LcdFilterWeight=16,64,128,64,16
+
+;【字体缓存、内存的设置】
+; 较低配置的机器请不要把LoadOnDemand设为1，有死机的危险
+LoadOnDemand=1
+CacheMaxFaces=256
+CacheMaxSizes=6140
+CacheMaxBytes=20485760
+EnableKerning=1
+
+;【优先使用点阵】
+;小于指定字号的文字将优先使用内嵌点阵
+MaxBitmap=0
+
+;【强制对小字体使用Hinting】
+;对9号以下字体自动施加Hinting，使小字体更清晰
+;此参数仅在AntiAliasMode=1、4、5时有效
+;0：关闭，1：开启。默认开启
+HintSmallFont=0
+
+;【对硬件加速的渲染支持】
+;对使用DirectWrite作为硬件加速技术的软件（如IE和firefox的硬件加速）提供渲染支持开关
+;0:关闭；1:开启
+DirectWrite=1
+
+[DirectWrite]
+;渲染模式，0=默认，1=锯齿，2=经典，3=经典自然，4=自然，5=自然对称，6=字体原型
+RenderingMode=5
+;Gamma值，不写则根据上面的GammaValue自动计算
+GammaValue=1.4
+;对比度，默认为1
+Contrast=0.6
+;抗锯齿程度，默认1
+ClearTypeLevel=0.4
+
+[Individual]
+;【单独设置的字体】
+;格式＝Hinting, AAMode, NormalWeight, BoldWeight, ItalicSlant, Kerning
+
+[Exclude]
+;【除外的字体】
+
+[ExcludeModule]
+;【不渲染的程序，但仍会加载DLL】
+
+[FontSubstitutes]
+;【字体替代】
+;系统在调用“=”前面的字体时会忽视“=”前面的字体，而去直接调用“=”后面的字体
+
+;其他字体
+;Arial=HarmonyOS Sans SC
+;Arial Black=HarmonyOS Sans SC Black
+;Arial Narrow=HarmonyOS Sans SC
+;Arial Unicode MS=HarmonyOS Sans SC
+Consolas=Fira Code
+;Georgia=HarmonyOS Sans SC
+Microsoft Sans Serif=HarmonyOS Sans SC
+MS Gothic=HarmonyOS Sans SC
+MS PGothic=HarmonyOS Sans SC
+MS Sans Serif=HarmonyOS Sans SC
+MS Serif=Georgia
+MS UI Gothic=HarmonyOS Sans SC
+NSimSun=HarmonyOS Sans SC
+SimSun=HarmonyOS Sans SC
+SimSun-ExtB=HarmonyOS Sans SC
+;Tahoma=HarmonyOS Sans SC
+;Times New Roman=HarmonyOS Sans SC
+;Verdana=HarmonyOS Sans SC
+Yu Gothic=HarmonyOS Sans SC
+Yu Gothic UI=HarmonyOS Sans SC
+
+;微软、系统界面
+Microsoft JhengHei=HarmonyOS Sans SC
+Microsoft JhengHei Light=HarmonyOS Sans SC Light
+Microsoft JhengHei UI=HarmonyOS Sans SC
+Microsoft JhengHei UI Light=HarmonyOS Sans SC Light
+Microsoft YaHei=HarmonyOS Sans SC
+Microsoft YaHei Light=HarmonyOS Sans SC Light
+Microsoft YaHei UI=HarmonyOS Sans SC
+Microsoft YaHei UI Light=HarmonyOS Sans SC Light
+Segoe UI=HarmonyOS Sans SC
+Segoe UI Light=HarmonyOS Sans SC Light
+Segoe UI Semilight=HarmonyOS Sans SC
+Segoe UI Semibold=HarmonyOS Sans SC Medium
+Segoe UI Bold=HarmonyOS Sans SC Bold
+Segoe UI Black=HarmonyOS Sans SC Black
+Segoe UI Variable=HarmonyOS Sans SC 
+Segoe UI Variable Small Light=HarmonyOS Sans SC Light
+Segoe UI Variable Small Semilight=HarmonyOS Sans SC
+Segoe UI Variable Small=HarmonyOS Sans SC
+Segoe UI Variable Small Semibold=HarmonyOS Sans SC Medium
+Segoe UI Variable Small Bold=HarmonyOS Sans SC Bold
+Segoe UI Variable Text Light=HarmonyOS Sans SC Light
+Segoe UI Variable Text Semilight=HarmonyOS Sans SC
+Segoe UI Variable Text=HarmonyOS Sans SC
+Segoe UI Variable Text Semibold=HarmonyOS Sans SC Medium
+Segoe UI Variable Text Bold=HarmonyOS Sans SC Bold
+Segoe UI Variable Display Light=HarmonyOS Sans SC Light
+Segoe UI Variable Display Semilight=HarmonyOS Sans SC
+Segoe UI Variable Display=HarmonyOS Sans SC
+Segoe UI Variable Display Semibold=HarmonyOS Sans SC Medium
+Segoe UI Variable Display Bold=HarmonyOS Sans SC Bold
+
+[UnloadDll]
+;【完全忽略的程序】
+Clash for Windows.exe
+cloudmusic.exe
+fontforge.exe
+fontview.exe
+HipsTray.exe
+Thunder.exe
+
+[ExcludeSub]
+;【排除不替换字体的程序】
+;以下程序不会被进行字体热替换
+EXCEL.EXE
+POWERPNT.EXE
+WINWORD.EXE
+
+[Experimental]
+;解除操作系统保护的积极性
+;0=默认，什么都不做。
+;1=去掉强制ms签要求。
+;2=降级动态代码生成限制；Chrome、ProcessHacker 和其他一些应用程序需要这个才能工作。
+ArmBreaker=2
+;彩色字体支持
+ColorFont=1
+
+[Experimental@chrome.exe]
+;解决某些程序错误地剪切文本底部或顶部的问题
+ClipBoxFix=1
+;反色以强制 chrome 显示正确的字体颜色，此选项仅在ColorFont打开时有效
+InvertColor=1
