--- a/HarmonyOS Sans SC.ini
+++ b/HarmonyOS Sans SC.ini
@@ -55,9 +55,9 @@ RenderWeight=1.75
 ;AntiAliasMode=1时，通过TextTuning分量来调节
 TextTuning=0
 ;AntiAliasMode=2时，通过TextTuning的RGB分量来调节
-TextTuningR=10
-TextTuningG=10
-TextTuningB=10
+TextTuningR=8
+TextTuningG=8
+TextTuningB=8
 
 ;【字体加粗模式】
 ;对NormalWeight和BoldWeight有效
@@ -87,7 +87,7 @@ FontLink=2
 ;1：安全替换方案（兼容性较好），根据以下FontSubstitutes的配置进行替换；
 ;2：完全替换方案（效果较全面，如替换后出现乱码，请尝试使用1），根据以下FontSubstitutes的配置进行替换；
 ;当FontLoader=1时，会保持启用的状态，但是所有字体替代的处理会交由WIN32API完成
-FontSubstitutes=2
+FontSubstitutes=1
 
 ;【让freetype处理的最大的字体尺寸，单位是像素，0的话就是全尺寸】
 ;交付 gdi++ 处理的最大尺寸（单位为像素）
@@ -96,8 +96,8 @@ MaxHeight=0
 
 ;【阴影设置】
 ;格式:水平偏移,垂直偏移,深色文字的阴影透明度(0-100),深色文字的阴影颜色,浅色文字的阴影透明度(0-100),浅色文字的阴影颜色
-;Shadow=1,1,70,FFFFFF,30,000000
-;Shadow=0,0,0,0x0,0,0x0
+;Shadow=1,1,10,FFFFFF,30,000000
+;Shadow=1,1,10,0x0,0,0x0
 
 ;【液晶显示器的优化配置】
 ;0:None；1:Default；2:Light；16:Legacy
@@ -119,15 +119,11 @@ CacheMaxSizes=6140
 CacheMaxBytes=20485760
 EnableKerning=1
 
-;【优先使用点阵】
-;小于指定字号的文字将优先使用内嵌点阵
-MaxBitmap=0
-
 ;【强制对小字体使用Hinting】
 ;对9号以下字体自动施加Hinting，使小字体更清晰
 ;此参数仅在AntiAliasMode=1、4、5时有效
 ;0：关闭，1：开启。默认开启
-HintSmallFont=0
+;HintSmallFont=0
 
 ;【对硬件加速的渲染支持】
 ;对使用DirectWrite作为硬件加速技术的软件（如IE和firefox的硬件加速）提供渲染支持开关
@@ -157,45 +153,7 @@ ClearTypeLevel=0.4
 [FontSubstitutes]
 ;【字体替代】
 ;系统在调用“=”前面的字体时会忽视“=”前面的字体，而去直接调用“=”后面的字体
-
-;其他字体
-;Arial=HarmonyOS Sans SC
-;Arial Black=HarmonyOS Sans SC Black
-;Arial Narrow=HarmonyOS Sans SC
-;Arial Unicode MS=HarmonyOS Sans SC
-Consolas=Fira Code
-;Georgia=HarmonyOS Sans SC
-Microsoft Sans Serif=HarmonyOS Sans SC
-MS Gothic=HarmonyOS Sans SC
-MS PGothic=HarmonyOS Sans SC
-MS Sans Serif=HarmonyOS Sans SC
-MS Serif=Georgia
-MS UI Gothic=HarmonyOS Sans SC
-NSimSun=HarmonyOS Sans SC
-SimSun=HarmonyOS Sans SC
-SimSun-ExtB=HarmonyOS Sans SC
-;Tahoma=HarmonyOS Sans SC
-;Times New Roman=HarmonyOS Sans SC
-;Verdana=HarmonyOS Sans SC
-Yu Gothic=HarmonyOS Sans SC
-Yu Gothic UI=HarmonyOS Sans SC
-
-;微软、系统界面
-Microsoft JhengHei=HarmonyOS Sans SC
-Microsoft JhengHei Light=HarmonyOS Sans SC Light
-Microsoft JhengHei UI=HarmonyOS Sans SC
-Microsoft JhengHei UI Light=HarmonyOS Sans SC Light
-Microsoft YaHei=HarmonyOS Sans SC
-Microsoft YaHei Light=HarmonyOS Sans SC Light
-Microsoft YaHei UI=HarmonyOS Sans SC
-Microsoft YaHei UI Light=HarmonyOS Sans SC Light
-Segoe UI=HarmonyOS Sans SC
-Segoe UI Light=HarmonyOS Sans SC Light
-Segoe UI Semilight=HarmonyOS Sans SC
-Segoe UI Semibold=HarmonyOS Sans SC Medium
-Segoe UI Bold=HarmonyOS Sans SC Bold
-Segoe UI Black=HarmonyOS Sans SC Black
-Segoe UI Variable=HarmonyOS Sans SC 
+Segoe UI Variable=HarmonyOS Sans SC
 Segoe UI Variable Small Light=HarmonyOS Sans SC Light
 Segoe UI Variable Small Semilight=HarmonyOS Sans SC
 Segoe UI Variable Small=HarmonyOS Sans SC
@@ -215,30 +173,60 @@ Segoe UI Variable Display Bold=HarmonyOS Sans SC Bold
 [UnloadDll]
 ;【完全忽略的程序】
 Clash for Windows.exe
-cloudmusic.exe
-fontforge.exe
+Clash Verge.exe
 fontview.exe
-HipsTray.exe
-Thunder.exe
+HwMdcUI.exe
+MessageCenterUI.exe
+PCManager.exe
+Quicker.exe
 
 [ExcludeSub]
 ;【排除不替换字体的程序】
 ;以下程序不会被进行字体热替换
+Acrobat.exe
+Adobe Premiere Pro.exe
 EXCEL.EXE
+Illustrator.exe
+Photoshop.exe
 POWERPNT.EXE
 WINWORD.EXE
+wps.exe
 
-[Experimental]
+;[Experimental]
 ;解除操作系统保护的积极性
 ;0=默认，什么都不做。
 ;1=去掉强制ms签要求。
 ;2=降级动态代码生成限制；Chrome、ProcessHacker 和其他一些应用程序需要这个才能工作。
-ArmBreaker=2
+;ArmBreaker=2
 ;彩色字体支持
-ColorFont=1
+;ColorFont=1
 
-[Experimental@chrome.exe]
+;[Experimental@chrome.exe]
 ;解决某些程序错误地剪切文本底部或顶部的问题
-ClipBoxFix=1
+;ClipBoxFix=1
 ;反色以强制 chrome 显示正确的字体颜色，此选项仅在ColorFont打开时有效
-InvertColor=1
+;InvertColor=1
+
+[FontSubstitutes@Consolas]
+;替换Consolas的配置组，当FontSubstitutes>0时生效
+SimSun=HarmonyOS Sans SC
+Consolas=Fira Code
+;===== 配置组程序 =====
+[General@chrome.exe]
+Alternative=Consolas
+[General@catsxp.exe]
+Alternative=Consolas
+
+[FontSubstitutes@SimSun]
+;替换SimSun的配置组，当FontSubstitutes>0时生效
+SimSun=HarmonyOS Sans SC
+;===== 配置组程序 =====
+[General@Notepad--.exe]
+Alternative=SimSun
+
+[FontSubstitutes@Tahoma]
+;替换Tahoma的配置组，当FontSubstitutes>0时生效
+Tahoma=HarmonyOS Sans SC
+;===== 配置组程序 =====
+[General@everything.exe]
+Alternative=Tahoma
